client/index.scss
* {
  box-sizing: border-box;
}

.my-container {
  margin-top: 30px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.results-wrapper {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 100%;
}

.specs-wrapper {
  display: flex;
  justify-content: center;
}

.team-records {
  max-width: 350px;
}

.sim-results {
  max-width: 100%;
}

.combo-graph {
  max-width: 100%;
}

.specs-size-limiter {
  max-width: 350px;
}

.column {
  padding: 0.5em;
}


@media (min-width: 565px) and (max-width: 1000px) {
  .specs-wrapper {
    width: 45%;
  }
  .team-records {
    width: 55%;
  }
}

@media (min-width: 1001px) {
  .specs-wrapper {
    width: 27%;
  }
  .team-records {
    width: 31%;
  }
  .combo-graph {
    width: 42%
  }
  .sim-results {
    width: 42%
  }
}

